2021-10-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el (find-libera-2a): use `find-rcirc-buffer-2a'.
	(find-libera-3a): use `find-rcirc-buffer-3a'.
	(find-freenode-2a): use `find-rcirc-buffer-2a'.
	(find-freenode-3a): use `find-rcirc-buffer-3a'.

2021-10-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-lua-mode): use
	`current-prefix-arg' to determine the number of "="s in the
	longcomment.

	* eev-mode.el (eev-mode-help): rewritten.

2021-10-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-evariable-links): added links starting with
	`keymapp', `find-ekeymapdescr', and `describe-keymap'; use
	`(find-function-read 'defvar)' instead of `(find-function-read
	'variable)'; other cosmetic changes.

	* eev-tlinks.el (ee-0x0-upload-region): use `ee-0x0-upload'.
	(ee-0x0-upload): new function. The comments explain how to
	"configure" it on versions of 0x0 that don't have a function
	`0x0-upload'.

2021-10-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el (find-freenode-links): deleted.
	(find-libera-links): new function.
	(find-rcirc-buffer-2a, find-rcirc-buffer-3a): fixed the arglists.

	* eev-plinks.el (find-wget): use `ee-wget-program'.

2021-10-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-ielm): new function.

	* eev-testblocks.el (ee-insert-test-c-mode)
	(ee-insert-test-haskell-mode, ee-insert-test-js-mode)
	(ee-insert-test-julia-mode, ee-insert-test-lisp-mode)
	(ee-insert-test-lua-mode, ee-insert-test-org-mode)
	(ee-insert-test-python-mode, ee-insert-test-racket-mode)
	(ee-insert-test-ruby-mode, ee-insert-test-scheme-mode)
	(ee-insert-test-sh-mode, ee-insert-test-tcl-mode)
	(ee-insert-test-tuareg-mode): use `ee-adjust-red-stars'.

2021-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (code-eevvideo-local, find-code-eevvideo-local)
	(ee-code-eevvideo-local): new functions.

	* eev-rcirc.el (ee-rcirc-connect-or-join): new function.